testdata/valid/internal/pkg/db.go
package pkg

type DB struct{}
