testdata/invalid/internal/app/dto.go
package app

type Input struct{ Name string }
